ENH: added qt volume display widgets
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12327 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/Volumes/Resources/UI/qSlicerVolumesModule.ui
+++ b/QTModules/Volumes/Resources/UI/qSlicerVolumesModule.ui
@@ -53,7 +53,7 @@
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_2">
        <item>
-        <widget class="qMRMLWindowLevelWidget" name="MRMLWindowLevelWidget"/>
+        <widget class="qSlicerVolumeDisplayWidget" name="VolumeDisplayWidget"/>
        </item>
       </layout>
      </widget>
@@ -106,7 +106,7 @@
   <connection>
    <sender>ActiveVolumeNodeSelector</sender>
    <signal>currentNodeChanged(vtkMRMLNode*)</signal>
-   <receiver>MRMLWindowLevelWidget</receiver>
+   <receiver>VolumeDisplayWidget</receiver>
    <slot>setMRMLVolumeNode(vtkMRMLNode*)</slot>
    <hints>
     <hint type="sourcelabel">
