ENH: added qMRMLVolumeThreshold widget and added it scalarVolume display.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12340 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/Volumes/Resources/UI/qSlicerScalarVolumeDisplayWidget.ui
+++ b/QTModules/Volumes/Resources/UI/qSlicerScalarVolumeDisplayWidget.ui
@@ -19,11 +19,19 @@
      <item>
       <widget class="qMRMLWindowLevelWidget" name="MRMLWindowLevelWidget"/>
      </item>
+     <item>
+      <widget class="qMRMLVolumeThresholdWidget" name="MRMLVolumeThresholdWidget"/>
+     </item>
     </layout>
    </item>
   </layout>
  </widget>
  <customwidgets>
+  <customwidget>
+   <class>qMRMLVolumeThresholdWidget</class>
+   <extends>QWidget</extends>
+   <header>qMRMLVolumeThresholdWidget.h</header>
+  </customwidget>
   <customwidget>
    <class>qMRMLWindowLevelWidget</class>
    <extends>QWidget</extends>
