ENH: SlicerQt: Don't show the "Add Node" option in the Volumes module
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12443 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/Volumes/Resources/UI/qSlicerVolumesModule.ui
+++ b/QTModules/Volumes/Resources/UI/qSlicerVolumesModule.ui
@@ -30,6 +30,9 @@
          <string>vtkMRMLVolumeNode</string>
         </stringlist>
        </property>
+       <property name="addEnabled">
+        <bool>false</bool>
+       </property>
       </widget>
      </item>
     </layout>
