ENH: Move and renamed "Visibile*.png" images from QTGUI to qMRMLWidgets
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13349 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qMRMLWidgets/Resources/qMRMLWidgets.qrc
+++ b/Libs/qMRMLWidgets/Resources/qMRMLWidgets.qrc
@@ -1,4 +1,7 @@
 <!DOCTYPE RCC><RCC version="1.0">
   <qresource>
+    <file>Icons/VisibleOff.png</file>
+    <file>Icons/VisibleOn.png</file>
+    <file>Icons/VisibleOrInvisible.png</file>
   </qresource>
 </RCC>
