--- a/QTModules/Measurements/Resources/UI/qSlicerMeasurementsAngleWidget.ui
+++ b/QTModules/Measurements/Resources/UI/qSlicerMeasurementsAngleWidget.ui
@@ -41,7 +41,7 @@
          </property>
          <property name="icon">
           <iconset>
-           <normaloff>:/Icons/Visible.png</normaloff>:/Icons/Visible.png</iconset>
+           <normaloff>:/Icons/VisibleOn.png</normaloff>:/Icons/VisibleOn.png</iconset>
          </property>
         </item>
         <item>
@@ -50,7 +50,7 @@
          </property>
          <property name="icon">
           <iconset>
-           <normaloff>:/Icons/Invisible.png</normaloff>:/Icons/Invisible.png</iconset>
+           <normaloff>:/Icons/VisibleOff.png</normaloff>:/Icons/VisibleOff.png</iconset>
          </property>
         </item>
        </widget>
