ENH: replaced qt range slider wit range widget
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13447 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qMRMLWidgets/Resources/UI/qMRMLVolumeThresholdWidget.ui
+++ b/Libs/qMRMLWidgets/Resources/UI/qMRMLVolumeThresholdWidget.ui
@@ -41,19 +41,15 @@
     </widget>
    </item>
    <item>
-    <widget class="ctkRangeSlider" name="VolumeThresholdRangeSlider">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-    </widget>
+    <widget class="ctkRangeWidget" name="VolumeThresholdRangeWidget"/>
    </item>
   </layout>
  </widget>
  <customwidgets>
   <customwidget>
-   <class>ctkRangeSlider</class>
-   <extends>QSlider</extends>
-   <header>ctkRangeSlider.h</header>
+   <class>ctkRangeWidget</class>
+   <extends>QWidget</extends>
+   <header>ctkRangeWidget.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
