--- a/QTModules/Volumes/Resources/UI/qSlicerVolumesModule.ui
+++ b/QTModules/Volumes/Resources/UI/qSlicerVolumesModule.ui
@@ -6,38 +6,34 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>681</width>
-    <height>549</height>
+    <width>525</width>
+    <height>319</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
-   <item>
-    <layout class="QHBoxLayout" name="horizontalLayout">
-     <item>
-      <widget class="QLabel" name="label">
-       <property name="text">
-        <string>Active Volume</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="qMRMLNodeComboBox" name="ActiveVolumeNodeSelector">
-       <property name="nodeTypes">
-        <stringlist>
-         <string>vtkMRMLVolumeNode</string>
-        </stringlist>
-       </property>
-       <property name="addEnabled">
-        <bool>false</bool>
-       </property>
-      </widget>
-     </item>
-    </layout>
+  <layout class="QGridLayout" name="gridLayout">
+   <item row="0" column="0">
+    <widget class="QLabel" name="ActiveVolumeLabel">
+     <property name="text">
+      <string>Active Volume</string>
+     </property>
+    </widget>
    </item>
-   <item>
+   <item row="0" column="1">
+    <widget class="qMRMLNodeComboBox" name="ActiveVolumeNodeSelector">
+     <property name="nodeTypes" stdset="0">
+      <stringlist>
+       <string>vtkMRMLVolumeNode</string>
+      </stringlist>
+     </property>
+     <property name="addEnabled" stdset="0">
+      <bool>false</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0" colspan="2">
     <widget class="ctkCollapsibleButton" name="CTKCollapsibleButton">
      <property name="text">
       <string>Display</string>
@@ -47,11 +43,7 @@
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_3">
       <item>
-       <layout class="QVBoxLayout" name="verticalLayout_2">
-        <item>
-         <widget class="qSlicerVolumeDisplayWidget" name="VolumeDisplayWidget" native="true"/>
-        </item>
-       </layout>
+       <widget class="qSlicerVolumeDisplayWidget" name="VolumeDisplayWidget" native="true"/>
       </item>
      </layout>
     </widget>
