STYLE: start modules with Help tab closed (mimics kwwidgets behavior)
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13787 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/QTGUI/Resources/UI/qSlicerModulePanel.ui
+++ b/Base/QTGUI/Resources/UI/qSlicerModulePanel.ui
@@ -46,6 +46,9 @@
          <property name="text">
           <string>Help</string>
          </property>
+         <property name="collapsed">
+          <bool>true</bool>
+         </property>
          <property name="contentsFrameShape">
           <enum>QFrame::StyledPanel</enum>
          </property>
