ENH: Added layout icons as qMRMLWidgets resources
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13876 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qMRMLWidgets/Resources/qMRMLWidgets.qrc
+++ b/Libs/qMRMLWidgets/Resources/qMRMLWidgets.qrc
@@ -3,5 +3,19 @@
     <file>Icons/VisibleOff.png</file>
     <file>Icons/VisibleOn.png</file>
     <file>Icons/VisibleOrInvisible.png</file>
+    
+    <file>Icons/LayoutChooseView.png</file>
+    <file>Icons/LayoutCompareView.png</file>
+    <file>Icons/LayoutConventionalView.png</file>
+    <file>Icons/LayoutDual3DView.png</file>
+    <file>Icons/LayoutFourUpView.png</file>
+    <file>Icons/LayoutLightboxView.png</file>
+    <file>Icons/LayoutOneUp3DView.png</file>
+    <file>Icons/LayoutOneUpGreenSliceView.png</file>
+    <file>Icons/LayoutOneUpRedSliceView.png</file>
+    <file>Icons/LayoutOneUpYellowSliceView.png</file>
+    <file>Icons/LayoutSideBySideCompareView.png</file>
+    <file>Icons/LayoutTabbed3DView.png</file>
+    <file>Icons/LayoutTabbedSliceView.png</file>
   </qresource>
 </RCC>
