COMP: change widget name to match new name in ctk for transfer function (ctkTransferFunctionView)
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13927 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/Volumes/Resources/UI/qSlicerScalarVolumeDisplayWidget.ui
+++ b/QTModules/Volumes/Resources/UI/qSlicerScalarVolumeDisplayWidget.ui
@@ -21,7 +21,7 @@
     <widget class="qMRMLWindowLevelWidget" name="MRMLWindowLevelWidget" native="true"/>
    </item>
    <item>
-    <widget class="ctkTransferFunctionWidget" name="TransferFunctionWidget">
+    <widget class="ctkTransferFunctionView" name="TransferFunctionWidget">
      <property name="maximumSize">
       <size>
        <width>16777215</width>
@@ -47,9 +47,9 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>ctkTransferFunctionWidget</class>
+   <class>ctkTransferFunctionView</class>
    <extends>QGraphicsView</extends>
-   <header>ctkTransferFunctionWidget.h</header>
+   <header>ctkTransferFunctionView.h</header>
   </customwidget>
   <customwidget>
    <class>qSlicerWidget</class>
