STYLE: Propagate CTK class renaming to Slicer: ctkTransferFunctionWidget -> ctkTransferFunctionView
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13930 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/Volumes/Resources/UI/qSlicerScalarVolumeDisplayWidget.ui
+++ b/QTModules/Volumes/Resources/UI/qSlicerScalarVolumeDisplayWidget.ui
@@ -21,7 +21,7 @@
     <widget class="qMRMLWindowLevelWidget" name="MRMLWindowLevelWidget" native="true"/>
    </item>
    <item>
-    <widget class="ctkTransferFunctionView" name="TransferFunctionWidget">
+    <widget class="ctkTransferFunctionView" name="TransferFunctionView">
      <property name="maximumSize">
       <size>
        <width>16777215</width>
