--- a/QTModules/Measurements/Resources/UI/qSlicerMeasurementsAngleWidget.ui
+++ b/QTModules/Measurements/Resources/UI/qSlicerMeasurementsAngleWidget.ui
@@ -90,7 +90,7 @@
          </widget>
         </item>
         <item row="0" column="1">
-         <widget class="qMRMLNodeSelector" name="AngleNodeSelector">
+         <widget class="qMRMLNodeComboBox" name="AngleNodeSelector">
           <property name="nodeTypes">
            <stringlist>
             <string>vtkMRMLMeasurementsAngleNode</string>
@@ -342,9 +342,9 @@
    <header>ctkComboBox.h</header>
   </customwidget>
   <customwidget>
-   <class>qMRMLNodeSelector</class>
+   <class>qMRMLNodeComboBox</class>
    <extends>QWidget</extends>
-   <header>qMRMLNodeSelector.h</header>
+   <header>qMRMLNodeComboBox.h</header>
   </customwidget>
   <customwidget>
    <class>qSlicerWidget</class>
