--- a/QTModules/Measurements/Resources/UI/qSlicerMeasurementsModule.ui
+++ b/QTModules/Measurements/Resources/UI/qSlicerMeasurementsModule.ui
@@ -95,7 +95,7 @@
        </widget>
       </item>
       <item row="1" column="1" rowspan="2">
-       <widget class="qMRMLNodeSelector" name="MRMLNodeSelector"/>
+       <widget class="qMRMLNodeComboBox" name="MRMLNodeSelector"/>
       </item>
       <item row="2" column="0">
        <widget class="QLabel" name="label_12">
@@ -130,9 +130,9 @@
    <container>1</container>
   </customwidget>
   <customwidget>
-   <class>qMRMLNodeSelector</class>
+   <class>qMRMLNodeComboBox</class>
    <extends>QWidget</extends>
-   <header>qMRMLNodeSelector.h</header>
+   <header>qMRMLNodeComboBox.h</header>
   </customwidget>
   <customwidget>
    <class>qSlicerWidget</class>
