ENH: Merge qSlicerMRMLSliceViewWidget and qMRMLSliceViewWidget classes
Since SlicerSliceLogic and SlicerSliceLayerLogic have been moved to MRMLLogic,
qMRMLWidgets library now depends on MRMLLogic

git-svn-id: http://svn.slicer.org/Slicer3/trunk@13979 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qMRMLWidgets/Resources/UI/qMRMLSliceViewWidget.ui
+++ b/Libs/qMRMLWidgets/Resources/UI/qMRMLSliceViewWidget.ui
@@ -59,7 +59,7 @@
         </item>
         <item>
          <property name="text">
-          <string>Sagital</string>
+          <string>Sagittal</string>
          </property>
         </item>
         <item>
