BUG: Update qMRMLSliceViewWidget.ui to consider the fact qMRMLNodeComboBox now extend from QWidget
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14001 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qMRMLWidgets/Resources/UI/qMRMLSliceViewWidget.ui
+++ b/Libs/qMRMLWidgets/Resources/UI/qMRMLSliceViewWidget.ui
@@ -294,7 +294,7 @@
   </customwidget>
   <customwidget>
    <class>qMRMLNodeComboBox</class>
-   <extends>QComboBox</extends>
+   <extends>QWidget</extends>
    <header>qMRMLNodeComboBox.h</header>
   </customwidget>
   <customwidget>
