--- a/QTModules/Volumes/Resources/UI/qSlicerVolumesIOOptionsWidget.ui
+++ b/QTModules/Volumes/Resources/UI/qSlicerVolumesIOOptionsWidget.ui
@@ -1,22 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>qSlicerVolumesIOOptionsWidget</class>
- <widget class="QWidget" name="qSlicerVolumesIOOptionsWidget">
+ <widget class="qSlicerWidget" name="qSlicerVolumesIOOptionsWidget">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>559</width>
+    <width>552</width>
     <height>27</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>Volume Options</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <property name="margin">
     <number>0</number>
    </property>
+   <item>
+    <widget class="QLineEdit" name="NameLineEdit">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+    </widget>
+   </item>
    <item>
     <widget class="QCheckBox" name="CenteredCheckBox">
      <property name="text">
@@ -45,18 +55,16 @@
      </property>
     </widget>
    </item>
-   <item>
-    <widget class="QLineEdit" name="NameLineEdit">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-    </widget>
-   </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>qSlicerWidget</class>
+   <extends>QWidget</extends>
+   <header>qSlicerWidget.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
